# pyrope

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg
docs/: CHANGELOG.rst  changelog.rst  conf.py  configuration.rst  developers.rst  development-env.rst  doc-developers.rst  doc-instructors.rst  doc-learners.rst  examples.rst  exercise_class.rst  exercises.rst  feedback.rst  hints.rst  index.rst  installation.rst  instructors.rst  learners.rst  parameters.rst  philosophy.rst  preamble.rst  problem.rst  quickstart.rst  running.rst  scoring.rst  solution.rst  tutorial.rst
pyrope/: __init__.py  __main__.py  config.py  core.py  database.py  dtypes.py  errors.py  examples.py  formatters.py  logo.py  messages.py  nodes.py  templates.py  tests.py  widgets.py
pyrope/frontends/: __init__.py  console_frontend.py  jupyter_frontend.py
pyrope/ipython_extension/: __init__.py  magics.py
pyrope/nbextension/: extension.js  pyrope.json
pyrope/nodes/: __init__.py  dtype_nodes.py  node.py  widgets.py
pyrope/nodes/_widgets/: __init__.py
pyrope/static/: jupyter_frontend.css
pyrope/widgets/: __init__.py
