[metadata]
name = pyrope
version = 0.1.0

[options]
packages = find:
zip_safe = False
python_requires = >=3.10
install_requires =
    ipython~=8.12
    ipywidgets~=8.0
    jupyter_client==7.4.9  # https://github.com/jupyter/notebook/issues/6721
    matplotlib~=3.7
    nbconvert==7.16.4
    notebook~=6.5  # Notebook extension is not yet compatible with notebook 7.
    numpy~=1.24
    setuptools  # Important for Python 3.12 in combination with Notebook 6.
    SQLAlchemy~=2.0.30
    sympy~=1.11
include_package_data = True

[options.data_files]
share/jupyter/nbextensions/pyrope =
  pyrope/nbextension/extension.js
etc/jupyter/nbconfig/notebook.d =
  pyrope/nbextension/pyrope.json

[flake8]
exclude =
    .git,
    __pycache__,
	pyrope.egg-info,
ignore =
    F403, W504,

[pylint.master]
errors-only = True
