[metadata]
name = pyrope
version = 0.1.0

[options]
packages = find:
zip_safe = False
python_requires = >=3.10
install_requires =
    matplotlib~=3.7
    notebook==7.*
    numpy~=1.24
    pyrope_ipywidgets @ https://github.com/PyRope-E-Assessment/pyrope-ipywidgets/raw/refs/heads/main/dist/pyrope_ipywidgets-0.1.0-py3-none-any.whl
    SQLAlchemy~=2.0.30
    sympy~=1.11
include_package_data = True

[flake8]
exclude =
    .git,
    __pycache__,
	pyrope.egg-info,
ignore =
    F403, W504,

[pylint.master]
errors-only = True
